--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -21,20 +21,13 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta
-              uses: docker/metadata-action@v3
-              with:
-                  images: sameli/manylinux2014_x86_64_cuda_10
-
             - name: Build and push Cuda-10
               id: docker_build
               uses: docker/build-push-action@v2
               with:
                   push: true
                   file: ./docker/cuda-10/Dockerfile
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
+                  tags: sameli/manylinux2014_x86_64_cuda_10:latest
 
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
@@ -51,20 +44,13 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta
-              uses: docker/metadata-action@v3
-              with:
-                  images: sameli/manylinux2014_x86_64_cuda_11
-
             - name: Build and push Cuda-11
               id: docker_build
               uses: docker/build-push-action@v2
               with:
                   push: true
                   file: ./docker/cuda-11/Dockerfile
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
+                  tags: sameli/manylinux2014_x86_64_cuda_11:latest
 
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
