--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -54,3 +54,26 @@ jobs:
 
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
+
+    build-cuda-12:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Build and push Cuda-12
+              id: docker_build
+              uses: docker/build-push-action@v3
+              with:
+                  push: true
+                  file: ./docker/cuda-12/Dockerfile
+                  tags: sameli/manylinux2014_x86_64_cuda_12:latest
+
+            - name: Image digest
+              run: echo ${{ steps.docker_build.outputs.digest }}
