--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -9,7 +9,7 @@ on:
             - published
 
 jobs:
-    build-cuda-10:
+    build-cuda-10.0:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -21,18 +21,18 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and push Cuda-10
+            - name: Build and push Cuda-10.0
               id: docker_build
               uses: docker/build-push-action@v3
               with:
                   push: true
-                  file: ./docker/cuda-10/Dockerfile
-                  tags: sameli/manylinux2014_x86_64_cuda_10:latest
+                  file: ./docker/cuda-10.0/Dockerfile
+                  tags: sameli/manylinux2014_x86_64_cuda_10.0:latest
 
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
 
-    build-cuda-11:
+    build-cuda-11.7:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -44,18 +44,18 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and push Cuda-11
+            - name: Build and push Cuda-11.7
               id: docker_build
               uses: docker/build-push-action@v3
               with:
                   push: true
-                  file: ./docker/cuda-11/Dockerfile
-                  tags: sameli/manylinux2014_x86_64_cuda_11:latest
+                  file: ./docker/cuda-11.7/Dockerfile
+                  tags: sameli/manylinux2014_x86_64_cuda_11.7:latest
 
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
 
-    build-cuda-12:
+    build-cuda-11.8:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -67,13 +67,59 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and push Cuda-12
+            - name: Build and push Cuda-11.8
               id: docker_build
               uses: docker/build-push-action@v3
               with:
                   push: true
-                  file: ./docker/cuda-12/Dockerfile
-                  tags: sameli/manylinux2014_x86_64_cuda_12:latest
+                  file: ./docker/cuda-11.8/Dockerfile
+                  tags: sameli/manylinux2014_x86_64_cuda_11.8:latest
+
+            - name: Image digest
+              run: echo ${{ steps.docker_build.outputs.digest }}
+
+    build-cuda-12.0:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Build and push Cuda-12.0
+              id: docker_build
+              uses: docker/build-push-action@v3
+              with:
+                  push: true
+                  file: ./docker/cuda-12.0/Dockerfile
+                  tags: sameli/manylinux2014_x86_64_cuda_12.0:latest
+
+            - name: Image digest
+              run: echo ${{ steps.docker_build.outputs.digest }}
+
+    build-cuda-12.2:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Build and push Cuda-12.2
+              id: docker_build
+              uses: docker/build-push-action@v3
+              with:
+                  push: true
+                  file: ./docker/cuda-12.2/Dockerfile
+                  tags: sameli/manylinux2014_x86_64_cuda_12.2:latest
 
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
