--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,21 @@
 version: '3'
 services:
-    cuda_10:
-        build: ./docker/cuda-10
-        image: sameli/manylinux2014_x86_64_cuda_10
+    cuda_10.2:
+        build: ./docker/cuda-10.2
+        image: sameli/manylinux2014_x86_64_cuda_10.2
 
-    cuda_11:
-        build: ./docker/cuda-11
-        image: sameli/manylinux2014_x86_64_cuda_11
+    cuda_11.7:
+        build: ./docker/cuda-11.7
+        image: sameli/manylinux2014_x86_64_cuda_11.7
 
-    cuda_12:
-        build: ./docker/cuda-12
-        image: sameli/manylinux2014_x86_64_cuda_12
+    cuda_11.8:
+        build: ./docker/cuda-11.8
+        image: sameli/manylinux2014_x86_64_cuda_11.8
+
+    cuda_12.0:
+        build: ./docker/cuda-12.0
+        image: sameli/manylinux2014_x86_64_cuda_12.0
+
+    cuda_12.2:
+        build: ./docker/cuda-12.2
+        image: sameli/manylinux2014_x86_64_cuda_12.2
