--- a/docker/cuda-11.8/Dockerfile
+++ b/docker/cuda-11.8/Dockerfile
@@ -4,11 +4,11 @@
 
 # -----------------------------------------------------------------------------
 # How to build
-#   $ docker build -t sameli/manylinux2014_x86_64_cuda_12 -f <This-Filename> .
+#   $ docker build -t sameli/manylinux2014_x86_64_cuda_11.8 -f <This-Filename> .
 #
 # How to run:
 #   $ docker run -it -v/host_dir:/image_dir --entrypoint /bin/bash \
-#         manylinux2014_x86_64_cuda_12
+#         manylinux2014_x86_64_cuda_11.8
 # -----------------------------------------------------------------------------
 
 # -----------------
@@ -18,17 +18,21 @@
 FROM quay.io/pypa/manylinux2014_x86_64
 
 MAINTAINER Siavash Ameli <samei@berkeley.edu>
-LABEL Description="manylinux2014_x86_64 with cuda 12.0"
+LABEL Description="manylinux2014_x86_64 with cuda 11.8"
 
 # ------------
 # Install cuda
 # ------------
 
 RUN yum install -y yum-utils
-RUN yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/cuda-rhel7.repo
+RUN yum install -y wget
+
+RUN wget https://developer.download.nvidia.com/compute/cuda/11.8.0/local_installers/cuda-repo-rhel7-11-8-local-11.8.0_520.61.05-1.x86_64.rpm
+RUN rpm -i cuda-repo-rhel7-11-8-local-11.8.0_520.61.05-1.x86_64.rpm
 RUN yum clean all
 RUN yum -y install nvidia-driver-latest-dkms cuda
 RUN yum -y install cuda-drivers
+RUN rm cuda-repo-rhel7-11-8-local-11.8.0_520.61.05-1.x86_64.rpm
 
 # -------------------------
 # Set environment variables
