--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -9,7 +9,7 @@ on:
             - published
 
 jobs:
-    build-cuda-10.0:
+    build-cuda-10-0:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -32,7 +32,7 @@ jobs:
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
 
-    build-cuda-11.7:
+    build-cuda-11-7:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -55,7 +55,7 @@ jobs:
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
 
-    build-cuda-11.8:
+    build-cuda-11-8:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -78,7 +78,7 @@ jobs:
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
 
-    build-cuda-12.0:
+    build-cuda-12-0:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -101,7 +101,7 @@ jobs:
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
 
-    build-cuda-12.2:
+    build-cuda-12-2:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
