--- a/.github/workflows/deploy-docker-11-8.yml
+++ b/.github/workflows/deploy-docker-11-8.yml
@@ -1,4 +1,4 @@
-name: deploy-docker
+name: deploy-docker-11-8
 
 on:
     push:
@@ -31,3 +31,24 @@ jobs:
 
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
+
+    test-cuda-11-8:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Install Snap
+              run: |
+                sudo apt update
+                sudo apt install snapd
+
+            - name: Install Docker
+              run: |
+                sudo snap install docker
+                sudo groupadd -f docker
+                sudo usermod -aG docker $USER
+                newgrp docker
+
+            - name: Pull Docker Image
+              run: docker pull sameli/manylinux2014_x86_64_cuda_11.8
+
+            - name: Run Docker Image
+              run: docker run -t sameli/manylinux2014_x86_64_cuda_11.8 nvcc --version
