--- a/.github/workflows/deploy-docker-10-2.yml
+++ b/.github/workflows/deploy-docker-10-2.yml
@@ -32,23 +32,23 @@ jobs:
             - name: Image digest
               run: echo ${{ steps.docker_build.outputs.digest }}
 
-    test-cuda-10-2:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Install Snap
-              run: |
-                sudo apt update
-                sudo apt install snapd
-
-            - name: Install Docker
-              run: |
-                sudo snap install docker
-                sudo groupadd -f docker
-                sudo usermod -aG docker $USER
-                newgrp docker
-
-            - name: Pull Docker Image
-              run: docker pull sameli/manylinux2014_x86_64_cuda_10.2
-
-            - name: Run Docker Image
-              run: docker run -t sameli/manylinux2014_x86_64_cuda_10.2 nvcc --version
+    # test-cuda-10-2:
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - name: Install Snap
+    #           run: |
+    #             sudo apt update
+    #             sudo apt install snapd
+    #
+    #         - name: Install Docker
+    #           run: |
+    #             sudo snap install docker
+    #             sudo groupadd -f docker
+    #             sudo usermod -aG docker $USER
+    #             newgrp docker
+    #
+    #         - name: Pull Docker Image
+    #           run: docker pull sameli/manylinux2014_x86_64_cuda_10.2
+    #
+    #         - name: Run Docker Image
+    #           run: docker run -t sameli/manylinux2014_x86_64_cuda_10.2 nvcc --version
