--- a/.github/workflows/deploy-docker-manylinux2014_x86_64_cuda_11.8.yml
+++ b/.github/workflows/deploy-docker-manylinux2014_x86_64_cuda_11.8.yml
@@ -1,4 +1,4 @@
-name: deploy-docker-11-8
+name: deploy-docker-manylinux2014_x86_64_cuda_11.8
 
 on:
     push:
@@ -9,7 +9,7 @@ on:
             - published
 
 jobs:
-    build-cuda-11-8:
+    build-manylinux_x86_64_cuda_11_8:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -21,12 +21,12 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Build and push Cuda-11.8
+            - name: Build and push manylinux2014_x86_64_cuda-11.8
               id: docker_build
               uses: docker/build-push-action@v3
               with:
                   push: true
-                  file: ./docker/cuda-11.8/Dockerfile
+                  file: ./docker/manylinux2014_x86_64_cuda_11.8/Dockerfile
                   tags: sameli/manylinux2014_x86_64_cuda_11.8:latest
 
             - name: Image digest
