--- a/.github/workflows/deploy-docker-manylinux2014_x86_64_cuda_11.7.yml
+++ b/.github/workflows/deploy-docker-manylinux2014_x86_64_cuda_11.7.yml
@@ -1,9 +1,9 @@
 name: deploy-docker-manylinux2014_x86_64_cuda_11.7
 
 on:
-    push:
-        branches:
-            - main
+    # push:
+    #     branches:
+    #         - main
     release:
         types: 
             - published
