--- a/docker/manylinux2014_aarch64_cuda_12.3/Dockerfile
+++ b/docker/manylinux2014_aarch64_cuda_12.3/Dockerfile
@@ -27,17 +27,17 @@ LABEL Description="manylinux2014_aarch64 with cuda 12.3"
 RUN yum install -y yum-utils
 RUN yum install -y wget
 
-# RUN wget https://developer.download.nvidia.com/compute/cuda/12.3.1/local_installers/cuda-repo-rhel9-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
-# RUN sudo rpm -i cuda-repo-rhel9-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
+RUN wget https://developer.download.nvidia.com/compute/cuda/12.3.1/local_installers/cuda-repo-rhel9-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
+RUN rpm -i cuda-repo-rhel9-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
+RUN yum clean all
+RUN yum -y install cuda-toolkit-12-3
+RUN rm cuda-repo-rhel9-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
+
+# RUN wget https://developer.download.nvidia.com/compute/cuda/12.3.1/local_installers/cuda-repo-rhel8-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
+# RUN sudo rpm -i cuda-repo-rhel8-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
 # RUN sudo yum clean all
 # RUN sudo yum -y install cuda-toolkit-12-3
-# RUN rm cuda-repo-rhel9-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
-
-RUN wget https://developer.download.nvidia.com/compute/cuda/12.3.1/local_installers/cuda-repo-rhel8-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
-RUN sudo rpm -i cuda-repo-rhel8-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
-RUN sudo yum clean all
-RUN sudo yum -y install cuda-toolkit-12-3
-RUN rm cuda-repo-rhel8-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
+# RUN rm cuda-repo-rhel8-12-3-local-12.3.1_545.23.08-1.aarch64.rpm
 
 # -------------------------
 # Set environment variables
