--- a/docker/manylinux2014_x86_64_cuda_12.0/Dockerfile
+++ b/docker/manylinux2014_x86_64_cuda_12.0/Dockerfile
@@ -24,8 +24,8 @@ LABEL Description="manylinux2014_x86_64 with cuda 12.0"
 # Install cuda
 # ------------
 
-VER="12-0"
-ARCH="x86_64"
+ARG VER="12-0"
+ARG ARCH="x86_64"
 
 RUN yum install -y yum-utils
 RUN yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/cuda-rhel7.repo
