--- a/docker/manylinux2014_aarch64_cuda_12.3/Dockerfile
+++ b/docker/manylinux2014_aarch64_cuda_12.3/Dockerfile
@@ -31,8 +31,7 @@ RUN yum install -y yum-utils
 RUN yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel9/sbsa/cuda-rhel9.repo
 RUN yum -y install cuda-compiler-${VER}.${ARCH} \
                    cuda-libraries-${VER}.${ARCH} \
-                   cuda-libraries-devel-${VER}.${ARCH} \
-                   nvidia-driver-latest-dkms
+                   cuda-libraries-devel-${VER}.${ARCH}
 RUN yum clean all
 RUN rm -rf /var/cache/yum/*
 RUN echo "/usr/local/cuda/lib64" >> /etc/ld.so.conf.d/999_nvidia_cuda.conf
