--- a/docker-compose-aarch64.yml
+++ b/docker-compose-aarch64.yml
@@ -3,3 +3,6 @@ services:
     manylinux2014_aarch64_cuda_12.3:
         build: ./docker/manylinux2014_aarch64_cuda_12.3
         image: sameli/manylinux2014_aarch64_cuda_12.3
+    manylinux_2_28_aarch64_cuda_12.3:
+        build: ./docker/manylinux_2_28_aarch64_cuda_12.3
+        image: sameli/manylinux_2_28_aarch64_cuda_12.3
