--- a/.github/workflows/deploy-docker-manylinux2014_x86_64_cuda_12.3.yml
+++ b/.github/workflows/deploy-docker-manylinux2014_x86_64_cuda_12.3.yml
@@ -10,21 +10,21 @@ on:
 
 jobs:
   build_docker:
-        name: manylinux2014_x86_64_cuda_12.3
+        name: build
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Login to Docker Hub
-              uses: docker/login-action@v2
+              uses: docker/login-action@v3
               with:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
 
             - name: Build and push manylinux2014_x86_64_cuda-12.3
               id: docker_build
-              uses: docker/build-push-action@v3
+              uses: docker/build-push-action@v5
               with:
                   push: true
                   file: ./docker/manylinux2014_x86_64_cuda_12.3/Dockerfile
@@ -35,7 +35,7 @@ jobs:
 
   test_docker:
         needs: [build_docker]
-        name: manylinux2014_x86_64_cuda_12.3
+        name: test
         runs-on: ubuntu-latest
         steps:
             - name: Install Snap
