--- a/docker/manylinux_2_34_x86_64_cuda_12.8/Dockerfile
+++ b/docker/manylinux_2_34_x86_64_cuda_12.8/Dockerfile
@@ -4,36 +4,35 @@
 
 # -----------------------------------------------------------------------------
 # How to build
-#   $ docker build -t sameli/manylinux2014_aarch64_cuda_12.3 -f <This-Filename> .
+#   $ docker build -t sameli/manylinux_2_34_x86_64_cuda_12.8 -f <This-Filename> .
 #
 # How to run:
 #   $ docker run -it -v/host_dir:/image_dir --entrypoint /bin/bash \
-#         manylinux2014_aarch64_cuda_12.3
+#         manylinux_2_34_x86_64_cuda_12.8
 # -----------------------------------------------------------------------------
 
 # -----------------
 # Choose base image
 # -----------------
 
-FROM quay.io/pypa/manylinux2014_aarch64
+FROM quay.io/pypa/manylinux_2_34_x86_64
 
 MAINTAINER Siavash Ameli <samei@berkeley.edu>
-LABEL Description="manylinux2014_aarch64 with cuda 12.3"
+LABEL Description="manylinux_2_34_x86_64 with cuda 12.8"
 
 # ------------
 # Install cuda
 # ------------
 
-ARG VER="12-3"
-ARG ARCH="aarch64"
+ARG VER="12-8"
+ARG ARCH="x86_64"
 
-RUN yum install -y yum-utils
-RUN yum-config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel9/sbsa/cuda-rhel9.repo
-RUN yum -y install cuda-compiler-${VER}.${ARCH} \
+RUN dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel9/x86_64/cuda-rhel9.repo
+RUN dnf -y install cuda-compiler-${VER}.${ARCH} \
                    cuda-libraries-${VER}.${ARCH} \
                    cuda-libraries-devel-${VER}.${ARCH}
-RUN yum clean all
-RUN rm -rf /var/cache/yum/*
+RUN dnf clean all
+RUN rm -rf /var/cache/dnf/*
 RUN echo "/usr/local/cuda/lib64" >> /etc/ld.so.conf.d/999_nvidia_cuda.conf
 
 # -------------------------
