--- a/.github/workflows/deploy-docker-manylinux_2_34_x86_64_cuda_12.8.yml
+++ b/.github/workflows/deploy-docker-manylinux_2_34_x86_64_cuda_12.8.yml
@@ -1,9 +1,9 @@
 name: deploy-docker-manylinux_2_34_x86_64_cuda_12.8
 
 on:
-    push:
-        branches:
-            - main
+    # push:
+    #     branches:
+    #         - main
     release:
         types: 
             - published
