--- a/docker-compose-x86_64.yml
+++ b/docker-compose-x86_64.yml
@@ -23,3 +23,7 @@ services:
     manylinux_2_34_x86_64_cuda_12.8:
         build: ./docker/manylinux_2_34_x86_64_cuda_12.8
         image: sameli/manylinux_2_34_x86_64_cuda_12.8
+
+    manylinux_2_34_x86_64_cuda_12.9:
+        build: ./docker/manylinux_2_34_x86_64_cuda_12.9
+        image: sameli/manylinux_2_34_x86_64_cuda_12.9
